feat: add another slide and some references

--- a/lecture13/lecture13.bib
+++ b/lecture13/lecture13.bib
@@ -36,3 +36,40 @@
   keywords      = {momentum,optimization},
   file          = {/home/jola/Zotero/storage/5MYJDUU5/Lessard et al. - 2016 - Analysis and design of optimization algorithms via integral quadratic constraints.pdf}
 }
+@inproceedings{kingmaAdamMethodStochastic2015,
+  title         = {Adam: A Method for Stochastic Optimization},
+  shorttitle    = {Adam},
+  booktitle     = {3rd {{International Conference}} on {{Learning Representations}}, {{ICLR}} 2015, {{San Diego}}, {{CA}}, {{USA}}, {{May}} 7-9, 2015, {{Conference Track Proceedings}}},
+  author        = {Kingma, Diederik P. and Ba, Jimmy},
+  editor        = {Bengio, Yoshua and LeCun, Yann},
+  date          = {2015},
+  url           = {http://arxiv.org/abs/1412.6980},
+  urldate       = {2024-10-22}
+}
+@unpublished{hintonLecture62018,
+  type          = {Oral Presentation},
+  title         = {Lecture 6},
+  author        = {Hinton, Geoffrey},
+  namea         = {Srivastava, Nitish and Swersky, Kevin},
+  nameatype     = {collaborator},
+  date          = {2018},
+  url           = {http://www.cs.toronto.edu/~tijmen/csc321/slides/lecture_slides_lec6.pdf},
+  eventtitle    = {Coursera Course: {{Neural}} Networks for Machine Learning},
+  langid        = {english},
+  venue         = {Virtual},
+  file          = {/home/jola/Zotero/storage/EY5I7UYB/Hinton - 2018 - Lecture 6.pdf}
+}
+@article{duchiAdaptiveSubgradientMethods2011,
+  title         = {Adaptive Subgradient Methods for Online Learning and Stochastic Optimization},
+  author        = {Duchi, John and Hazan, Elad and Singer, Yoram},
+  date          = {2011},
+  journaltitle  = {Journal of Machine Learning Research},
+  volume        = {12},
+  number        = {61},
+  pages         = {2121--2159},
+  issn          = {1533-7928},
+  url           = {http://jmlr.org/papers/v12/duchi11a.html},
+  urldate       = {2024-10-22},
+  abstract      = {We present a new family of subgradient methods that dynamically incorporate knowledge of the geometry of the data observed in earlier iterations to perform more informative gradient-based learning. Metaphorically, the adaptation allows us to find needles in haystacks in the form of very predictive but rarely seen features. Our paradigm stems from recent advances in stochastic optimization and online learning which employ proximal functions to control the gradient steps of the algorithm. We describe and analyze an apparatus for adaptively modifying the proximal function, which significantly simplifies setting a learning rate and results in regret guarantees that are provably as good as the best proximal function that can be chosen in hindsight. We give several efficient algorithms for empirical risk minimization problems with common and important regularization functions and domain constraints. We experimentally study our theoretical analysis and show that adaptive subgradient methods outperform state-of-the-art, yet non-adaptive, subgradient algorithms.},
+  file          = {/home/jola/Zotero/storage/IHSP25C3/Duchi et al. - 2011 - Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.pdf}
+}
