feat: add polyak reference

--- a/lecture13/main.tex
+++ b/lecture13/main.tex
@@ -159,7 +159,7 @@
       \pause
 
       \begin{block}{Polyak Momentum}
-        Classical version
+        Classical version~\parencite{polyakMethodsSpeedingConvergence1964}
 
         \medskip
 
