--- a/lecture13/lecture13.bib
+++ b/lecture13/lecture13.bib
@@ -73,3 +73,19 @@
   abstract      = {We present a new family of subgradient methods that dynamically incorporate knowledge of the geometry of the data observed in earlier iterations to perform more informative gradient-based learning. Metaphorically, the adaptation allows us to find needles in haystacks in the form of very predictive but rarely seen features. Our paradigm stems from recent advances in stochastic optimization and online learning which employ proximal functions to control the gradient steps of the algorithm. We describe and analyze an apparatus for adaptively modifying the proximal function, which significantly simplifies setting a learning rate and results in regret guarantees that are provably as good as the best proximal function that can be chosen in hindsight. We give several efficient algorithms for empirical risk minimization problems with common and important regularization functions and domain constraints. We experimentally study our theoretical analysis and show that adaptive subgradient methods outperform state-of-the-art, yet non-adaptive, subgradient algorithms.},
   file          = {/home/jola/Zotero/storage/IHSP25C3/Duchi et al. - 2011 - Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.pdf}
 }
+@article{polyakMethodsSpeedingConvergence1964,
+  title         = {Some Methods of Speeding up the Convergence of Iteration Methods},
+  author        = {Polyak, B. T.},
+  date          = {1964-01-01},
+  journaltitle  = {USSR Computational Mathematics and Mathematical Physics},
+  shortjournal  = {USSR Computational Mathematics and Mathematical Physics},
+  volume        = {4},
+  number        = {5},
+  pages         = {1--17},
+  issn          = {0041-5553},
+  doi           = {10.1016/0041-5553(64)90137-5},
+  url           = {https://www.sciencedirect.com/science/article/pii/0041555364901375},
+  urldate       = {2024-10-22},
+  abstract      = {For the solution of the functional equation P (x) = 0 (1) (where P is an operator, usually linear, from B into B, and B is a Banach space) iteration methods are generally used. These consist of the construction of a series x0, \ldots{}, xn, \ldots{}, which converges to the solution (see, for example [1]). Continuous analogues of these methods are also known, in which a trajectory x(t), 0 \leqslant{} t \leqslant{} \infty{} is constructed, which satisfies the ordinary differential equation in B and is such that x(t) approaches the solution of (1) as t \rightarrow{} \infty{} (see [2]). We shall call the method a k-step method if for the construction of each successive iteration xn+1 we use k previous iterations xn, \ldots{}, xn-k+1. The same term will also be used for continuous methods if x(t) satisfies a differential equation of the k-th order or k-th degree. Iteration methods which are more widely used are one-step (e.g. methods of successive approximations). They are generally simple from the calculation point of view but often converge very slowly. This is confirmed both by the evaluation of the speed of convergence and by calculation in practice (for more details see below). Therefore the question of the rate of convergence is most important. Some multistep methods, which we shall consider further, which are only slightly more complicated than the corresponding one-step methods, make it possible to speed up the convergence substantially. Note that all the methods mentioned below are applicable also to the problem of minimizing the differentiable functional (x) in Hilbert space, so long as this problem reduces to the solution of the equation grad (x) = 0.},
+  file          = {/home/jola/Zotero/storage/7KQ49U4Y/0041555364901375.html}
+}
