feat: add nesterov reference

--- a/lecture13/main.tex
+++ b/lecture13/main.tex
@@ -293,6 +293,10 @@
 
   Overcomes convergence problem of classical (Polyak) momentum.
 
+  \bigskip
+
+  First appeared in \textcite{nesterovMethodSolvingConvex1983}.
+
 \end{frame}
 
 \begin{frame}[c]
