refactor: change of phrase

--- a/lecture13/main.tex
+++ b/lecture13/main.tex
@@ -295,7 +295,7 @@
 
   \bigskip
 
-  First appeared in \textcite{nesterovMethodSolvingConvex1983}.
+  First appeared in article by \textcite{nesterovMethodSolvingConvex1983}.
 
 \end{frame}
 
